XWIKI-4539: "Add new group" button is hardly readable Fixed. Merged from trunk@24758
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/branches/xwiki-web-2.0@24759 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/resources/js/xwiki/usersandgroups/usersandgroups.css
+++ b/xwiki-platform-web/standard/src/main/webapp/resources/js/xwiki/usersandgroups/usersandgroups.css
@@ -52,20 +52,6 @@
   padding-top: 11px;
 }
 
-#tdAddNewUserOrGroup a {
-  color: #fff;
-  font-weight: bold;
-  font-size: 12px;
-  text-decoration: none;
-  background-image: url($xwiki.getSkinFile('js/xwiki/usersandgroups/img/but1.png'));
-  background-repeat: no-repeat !important;
-  display: block;
-  text-align: center;
-  padding-top: 3px;
-  width: 130px;
-  height: 24px;
-}
-
 #errMsg {
   color: #DD7700;
   font-size: 12px;
